Reworked sections still using Java 21 features